# potato

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.org  options.txt
.cargo/: config
bootloader/: Cargo.toml  Makefile
bootloader/src/: main.rs
example/: .gitignore  Cargo.toml  linker.ld  options.txt
example/.cargo/: config
example/kernel/: Cargo.toml  linker.ld  x86_64-kernel.json
example/kernel/src/: graphics.rs  main.rs
example/shared/lockcell/: Cargo.toml
example/shared/lockcell/src/: lib.rs
example/src/: main.rs
shared/boot_common/: Cargo.toml
shared/boot_common/src/: lib.rs
shared/option_parser/: Cargo.toml
shared/option_parser/src/: lib.rs
shared/uefi/: Cargo.toml
shared/uefi/src/: fs.rs  graphics.rs  lib.rs  memory.rs
src/: main.rs
