[package]
name = "potato_loader"
version = "0.1.0"
authors = ["Patrik M. Rosenström <patrik.millvik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
uefi = { path = "../shared/uefi" }
option_parser = { path = "../shared/option_parser" }
boot_common = { path = "../shared/boot_common" }
elf_rs = "0.1.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort" 
