[package]
name = "example"
version = "0.1.0"
authors = ["Patrik M. Rosenström <patrik.millvik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
boot_common = { path = "../../shared/boot_common" }
uefi = { path = "../../shared/uefi" }
spin = "0.5.2"
